--- a/index.html
+++ b/index.html
@@ -5,37 +5,11 @@
 	<script src="Assets/Javascript/mobile.js"></script>
 </head>
 <body>
-
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="#">Home</a>
-  <a href="Pages/Achievements.html"> Achievements</a>
-  <a href="Pages/Design.html">Design</a>
-  <a href="Pages/Projects.html">Projects</a>
-</div>
-
-<div class="row">
-	<div class="myTitle"> <span style="color:#AA7939;font-size:75px;cursor:pointer;display: inline-block; float: left;" onclick="openNav()">☰</span> Personal Site </div>
-</div>
-<div class="row">
-	<div class="spacer">
-		&nbsp;
-	</div>
-</div>
-<div class="row">
-	<img src="Assets/Images/main.jpg" alt="Placeholder Image">
-</div>
-<div class="row">
-	<div class="textContent">
-		<p> Hello, my name is Jacob Bullard and I am currently a second year Human Centered Computing major at the Rochester Institute of Technology <p>
-		<p> Throughout my studies thus far I have learned the basics of Java, web design (including some SQL backend), as well as the basics of design in programs like Photoshop and Illustrator.
-		My skill set lies in my ability to develop websites that transition cleanly between a desktop environment and the ever growing mobile computing environment.
-		In addition to my technical skills I also have taken courses in Psychology and Statistics, which allow me to gain a better understanding of an average user as well as make use of data gathered through various forms of analytics. <p>
-		<p> As you navigate through the site you will see on showcase a small set of my skills from this past year of courses, my portfolio will remain up to date and will showcase my talents in regards to design, statistical knowlege, and cutting edge web development <p>
-	<div class="important"> <p> Contact me at jacobbullard[at]mail[dot]rit[dot]edu </p> </div>
-	</div>
-</div>
-
-<div class="myFooter"> &copy; Jacob Bullard 2016 <a href="https://www.linkedin.com/in/jacob-bullard-b582a8b4">     LinkedIn Profile</a></div>  
+	<h1> Jacob Bullard RIT Human-Centered Computing </h1>
+	
+	<p> Thank you for coming by my website, it is still very much under construction and I will be making progress on it in the near future
+		as I am new to GitHub Pages so I need to learn the system a bit to upload files. Thank you for your patients </p>
+	
+	<div class="myFooter"> &copy; Jacob Bullard 2016 <a href="https://www.linkedin.com/in/jacob-bullard-b582a8b4">     LinkedIn Profile</a></div>  
 </body>
 </html>
